--- a/src/core/System/templates/WorkSpaceBackground.html
+++ b/src/core/System/templates/WorkSpaceBackground.html
@@ -1,10 +1,9 @@
 <style media="screen">
     .workspace.bg {
-        position: absolute;
         left: 0;
         top: 0;
-        bottom: 0;
-        right: 0;
+        height: 100%;
+        width: 100%;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
