--- a/src/core/System/templates/mainWindow.html
+++ b/src/core/System/templates/mainWindow.html
@@ -20,12 +20,12 @@
         align-items: center;
         justify-content: center;
         display: flex;
-        left: 0;
-        right: 0;
+        left: 50%;
         position: absolute;
         top: 0;
         bottom: 0;
         font-size: 1.4rem;
+        transform: translateX(-50%);
     }
 
     .window > .windowTitle .action {
@@ -35,6 +35,7 @@
         font-size: 1.2rem;
         display: inline-block;
         margin-right: .3rem;
+        position: relative;
     }
 
     .window > .windowTitle .action.close {
@@ -49,6 +50,22 @@
         background-color: limegreen;
     }
 
+    .window > .windowTitle .action.close:hover::after {
+        position: absolute;
+        left: 0;
+        top: 0;
+        content: 'x';
+        font-size: 1.2rem;
+        display: flex;
+        right: 0;
+        bottom: 0;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        user-select: none;
+        -moz-user-select: none;
+    }
+
     .mainWindow > .view-port-container {
         flex: 1 1 auto;
         position: relative;
@@ -58,12 +75,12 @@
 
 <div class="window mainWindow" style="z-index: {{_getZIndex()}}">
     <div class="windowTitle">
+        <div class="title">{{name}}</div>
         <div class="actions">
-            <span class="action close"></span>
+            <span class="action close" bind-events="{click:closeWindow}"></span>
             <span class="action hide"></span>
             <span class="action max"></span>
         </div>
-        <div class="title">{{name}}</div>
     </div>
     <div class="view-port-container">
         <view-port scope-name="{{id}}"></view-port>
