--- a/src/core/System/templates/mainWindow.html
+++ b/src/core/System/templates/mainWindow.html
@@ -14,6 +14,7 @@
 
     .window > .windowTitle {
         position: relative;
+        margin-bottom: .8rem;
     }
 
     .window > .windowTitle .title {
