--- a/src/core/System/templates/workSpaceBorderToolWindow.html
+++ b/src/core/System/templates/workSpaceBorderToolWindow.html
@@ -4,8 +4,17 @@
         top: 50%;
         transform: translateY(-50%);
     }
+
+    .window.workspace-border-tool[orientation="top"] {
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 </style>
 
-<div class="window workspace-border-tool" style="z-index: {{_getZIndex()}}" bind-display="isVisible()" orientation="{{side}}">
+<div class="window workspace-border-tool" style="z-index: {{_getZIndex()}}"
+     bind-display="isVisible()" orientation="{{side}}"
+     bind-style="{dimensions.left: position.x, dimensions.top: position.y,
+                 dimensions.height: dimension.height, dimensions.width: dimension.width}">
     <view-port scope-name="{{id}}"></view-port>
 </div>
