Major system overhaul
- UI system is now almost completely binding driven
- WindowManagement is completely uncoupled from rendering
- more reliable boot through elimination of race conditions.
- update of the Binding library
- update of the ApplicationFrame library

--- a/src/core/System/templates/Terminal.html
+++ b/src/core/System/templates/Terminal.html
@@ -1,29 +1,32 @@
-<style media="screen">
-    .terminal {
-        background-color: black;
-        color: white;
-        font-family: monospace;
-        flex: 1 1 100%;
-    }
+<template>
+    <style media="screen">
+        .terminal {
+            background-color: black;
+            color: white;
+            font-family: monospace;
+            overflow: auto;
+            height: 100%;
+        }
 
-    .terminal .container {
-        margin: 10px;
-        word-break: break-all;
-    }
+        .terminal .container {
+            margin: 10px;
+            word-break: break-all;
+        }
 
-    .terminal div[type="error"] {
-        color: red;
-    }
+        .terminal div[type="error"] {
+            color: red;
+        }
 
-    .terminal div [type="success"] {
-        color: green;
-    }
-</style>
+        .terminal div [type="success"] {
+            color: green;
+        }
+    </style>
 
-<div class="terminal">
-    <div class="container">
-        <template repeat="line in lineBuffer" replace>
-            <div index="{{$index}}" type="{{line.type}}">{{line.content}}</div>
-        </template>
+    <div class="terminal">
+        <div class="container">
+            <template bind-repeat(fast)="line in view.lineBuffer">
+                <div index="{{$index}}" type="{{line.type}}">{{line.content}}</div>
+            </template>
+        </div>
     </div>
-</div>
+</template>
