Implement a package loader
 - improved build system to make packages possible
 - added URL resolver to create different kinds of urls to be used in packages
 - upgrade of application frame
 - new icons

--- a/src/core/System/templates/WorkSpaceBackground.html
+++ b/src/core/System/templates/WorkSpaceBackground.html
@@ -8,6 +8,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+            background-color: #817778;
         }
 
         .view-port[scope-name="default"] {
