--- a/src/core/System/templates/WorkSpaceMainMenu.html
+++ b/src/core/System/templates/WorkSpaceMainMenu.html
@@ -52,7 +52,7 @@
         <li class="item" tabindex="0">
             <system-icon name="home"></system-icon>
             <ul class="sub-menu">
-                <li class="item">About</class>
+                <li class="item" bind-event(click)="view.onAboutSystem">About</class>
             </ul>
         </li>
     </ul>
