--- a/src/core/System/templates/WorkSpaceFileManager.html
+++ b/src/core/System/templates/WorkSpaceFileManager.html
@@ -24,6 +24,11 @@
             align-items: flex-start;
             justify-content: space-between;
             overflow: auto;
+
+            display: grid;
+            grid-template-columns: repeat(auto-fit, 120px);
+            grid-auto-rows: max-content;
+            overflow-x: hidden;
         }
 
         .fileGrid .item {
@@ -31,7 +36,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 11.5rem;
+            box-sizing: border-box;
+            flex: 1 0 120px;
         }
 
         .fileGrid .file {
