Updated window styles

--- a/src/core/System/templates/ApplicationWindow.html
+++ b/src/core/System/templates/ApplicationWindow.html
@@ -19,7 +19,11 @@
 
         .windowTitle {
             position: relative;
-            padding: .8rem;
+            padding: 15px;
+            -webkit-user-select: text;
+            -moz-user-select: text;
+            -ms-user-select: text;
+            user-select: text;
         }
 
         .windowTitle:active {
@@ -81,7 +85,7 @@
             flex: 1 1 auto;
             position: relative;
             overflow: auto;
-            margin: 0 .8rem .8rem;
+            margin: 0;
         }
     </style>
 
