--- a/src/core/System/templates/WorkSpaceMainMenu.html
+++ b/src/core/System/templates/WorkSpaceMainMenu.html
@@ -56,7 +56,7 @@
             </ul>
         </li>
         <li class="item" tabindex="0">
-            <span>{{view.getTitle(view.currentApplication)}}</span>
+            <span>{{view.currentApplication.title}}</span>
 
             <ul class="sub-menu">
                 <template bind-repeat="entry in view.currentMenu.entries">
