--- a/src/core/styles/global.css
+++ b/src/core/styles/global.css
@@ -12,4 +12,10 @@ body {
     left: 0;
     top: 0;
     position: absolute;
+    background-color: black;
+    background-image: url('../userSpace/theme/icons/icon-cut-out.svg');
+    background-size: 40vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
