doc icons don't work in chrome

--- a/src/core/System/templates/WorkSpaceDock.html
+++ b/src/core/System/templates/WorkSpaceDock.html
@@ -32,7 +32,7 @@
         }
 
         .workspace.dock .icon {
-            height: 100%;
+            padding-top: 100%;
             width: 100%;
             background-size: contain;
             background-position: center;
